# djforge

./: .editorconfig  .env.dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Changelog.md  Contributing.md  License.md  Manifest.md  README.md  Setup.md  build.sh  docker-compose.yml  input.css  makefile  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js
.github/workflows/: pytest.yml
development_assist/: dev_env_tmux  docker_compose_wrapper  pgadmin_database_servers.json
dj_billing/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
dj_billing/management/commands/: setup_plans.py  sync_stripe_data.py
dj_billing/migrations/: 0001_initial.py  0002_customer_dj_billing__stripe__e5f94c_idx_and_more.py
dj_billing/templates/dj_billing/: billing.html
dj_billing/tests/: __init__.py  test_models.py  test_services.py  test_views.py
dj_chatbot/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dj_chatbot/migrations/: __init__.py
dj_chatbot/templates/cotton/: message.html
dj_chatbot/templates/dj_chatbot/: chat.html
dj_contact_us/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
dj_contact_us/migrations/: 0001_initial.py  0002_remove_contactusentry_created_at_and_more.py
dj_contact_us/templates/dj_contact_us/: contact.html
dj_contact_us/tests/: __init__.py  test_content_view.py
dj_content/: __init__.py  admin.py  apps.py  models.py  urls.py  utilities.py  views.py
dj_content/templates/dj_content/: about_us.html  cookies_policy.html  dashboard.html  license.html
dj_content/tests/: __init__.py  test_content_pages.py
dj_dashboard/: __init__.py  apps.py  urls.py  views.py
dj_dashboard/templates/dj_dashboard/: dashboard.html
dj_dashboard/tests/: __init__.py  conftest.py  test_login_redirection_to_dashboard.py  test_sign_up_redirection_to_dashboard_with_flag.py
dj_emails/: __init__.py  admin.py  apps.py  dispatchers.py  exceptions.py  models.py
dj_emails/backends/: __init__.py  resend.py
dj_emails/email_templates/html/: djforge-reset-password.html  djforge-reset-password.txt  email_confirmation_message.html  notion-magic-link.html  password_reset_key_message.html  plaid-verify-identity.html  stripe-welcome.html  stripe-welcome.txt  vercel-invite-user.html
dj_emails/email_templates/txt/: djforge-reset-password.txt  email_confirmation_message.txt  password_reset_key_message.txt  plaid-verify-identity.txt  vercel-invite-user.txt
dj_emails/management/: __init__.py
dj_emails/management/commands/: __init__.py  dispatch_test_email.py
dj_emails/react_email/: package-lock.json  package.json
dj_emails/react_email/emails/: djforge-reset-password.tsx  email_confirmation_message.tsx  password_reset_key_message.tsx
dj_emails/templates/dj_emails/html/: djforge-reset-password.html  email_confirmation_message.html  password_reset_key_message.html
dj_emails/templates/dj_emails/txt/: djforge-reset-password.txt  notion-magic-link.txt
dj_emails/templatetags/: __init__.py  dj_emails_tags.py
dj_favicons/: __init__.py  apps.py  views.py
dj_favicons/templates/dj_favicons/: favicons_block_for_head.html  manifest.json
dj_favicons/tests/: test_views.py
dj_landing_page/: __init__.py  apps.py  views.py
dj_landing_page/templates/dj_landing_page/: index.html
dj_landing_page/templates/dj_landing_page/partials/: customer_quotes.html  faq_block.html  features_block.html  footer_block.html  footer_block_lite.html  header.html  hero_block.html  icon_row_block.html  pricing_card_block.html  start_trial_cta_block.html  used_by_block.html
dj_pocs/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
dj_pocs/sample_data/: post_codes_and_demand.json
dj_pocs/templates/dj_pocs/: map.html  view_for_admin_permissions.html  view_for_admin_prermissions.html
dj_pocs/tests/: __init__.py  test_administrators_restricted_view.py
dj_register_interest/: __init__.py  admin.py  apps.py  forms.py  handlers.py  models.py  urls.py  views.py
dj_register_interest/migrations/: 0001_initial.py  0002_interest_created_at.py  0003_interest_user_intent_alter_interest_github_handle.py  0004_remove_interest_created_at_interest_created.py
dj_register_interest/templates/dj_register_interest/: register_interest.html
dj_register_interest/templatetags/: __init__.py  tailwind_filters.py
dj_register_interest/tests/: __init__.py  test_register_interest_view.py
dj_tasks/: __init__.py  apps.py  tasks.py
dj_theme/: __init__.py  apps.py  urls.py  views.py
dj_theme/static/dj_theme/css/: output.css
dj_theme/static/dj_theme/js/: app.bundle.js
dj_theme/templates/cotton/: button.html  footer.html  footer_navigation.html  input.html
dj_theme/templates/dj_theme/: base.html  base_logged_in.html  base_not_logged_in.html  dashboard.html  demo_display_messages.html  header.html  messages.html
dj_users/: __init__.py  admin.py  apps.py  models.py  permissions.py  seed.py  urls.py  utilities.py  views.py
dj_users/management/: __init__.py
dj_users/management/commands/: __init__.py  seed_groups.py
dj_users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_managers.py
dj_users/perms/admin/: permissions.json
dj_users/perms/user/: permissions.json
dj_users/templates/account/: email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_reset_logged_in.html  password_reset_not_logged_in.html  signup.html  verification_sent.html
dj_users/templates/dj_users/: admin_account.html  user_account.html  user_list.html
dj_users/templatetags/: __init__.py  dj_users_tags.py
dj_users/tests/: __init__.py  base_classes.py  test_user_change_password.py  test_user_creation.py  test_user_list_access.py  test_user_login.py  test_user_logout.py  test_user_permissions.py
djforge/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: __init__.py  rich_demo.py
static/src/: output.css
templates/: _base.html  index.html
(+30 files in other folders)
