[tool.poetry]
name = "djforge"
version = "0.1.0"
description = "Bootstrap and Grow your SaaS with Django (edi"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
#
# Required from Flowbite
#
django-compressor = "^4.4"
#
# Package that allows you to use Twelve-factor methodology to configure your Django
# application with environment variables.
# https://django-environ.readthedocs.io/en/latest/
# MIT / X11 License
#
django-environ = "^0.11.2"
#
# The most popular PostgreSQL adapter for the Python programming language.
# https://www.psycopg.org/
# LGPL-3.0 license
#
psycopg = {extras = ["binary"], version = "^3.1.17"}

#
# End of DJForge dependencies, add yours below
#

[tool.poetry.group.dev.dependencies]
#
# https://github.com/astral-sh/ruff
# An extremely fast Python linter and code formatter, written in Rust.
# MIT license
#
ruff = "^0.1.11"
#
# The pytest framework makes it easy to write small tests,
# yet scales to support complex functional testing for applications and libraries.
# https://github.com/pytest-dev/pytest
# Commitizen is release management tool designed for teams.
# https://commitizen-tools.github.io/commitizen/
# MIT license
#
pytest = "^7.4.4"
#
# A plugin for pytest that provides a set of useful tools
# for testing Django applications and projects.
# https://pytest-django.readthedocs.io/en/latest/
# BSD (3-clause) license
# Commitizen is release management tool designed for teams.
# https://commitizen-tools.github.io/commitizen/
# MIT license
#
pytest-django = "^4.7.0"
#
# Commitizen is release management tool designed for teams.
# https://commitizen-tools.github.io/commitizen/
# MIT license
#
commitizen = "^3.13.0"
#
# This django app adds a management command that starts a livereload server watching
# all your static files and templates as well as a custom runserver command that issues
# livereload requests when the development server is ready after a restart.
# https://github.com/tjwalch/django-livereload-server
# BSD-3-Clause license
#
django-livereload-server = "^0.5.1"
#
# A framework for managing and maintaining multi-language pre-commit hooks.
# https://pre-commit.com/
# MIT license
#
pre-commit = "^3.6.0"

#
# End of DJForge development dependencies, add yours below
#
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ["dj_register_interest/migrations/0001_initial.py"]

[tool.ruff.extend-per-file-ignores]
"**/migrations/*.py" = ["D100", "D101", "D104"]


# https://docs.astral.sh/ruff/tutorial/#rule-selection
[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade: automatically upgrade syntax for newer versions of the language.
  "D",   # pydocstyle: checking compliance with Python docstring conventions.
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djforge.settings"
addopts = [
    "--capture=no",
    "--reuse-db",
    "--no-migrations",
    "--fail-on-template-vars"
    ]
