[project]
name = "djforge"
version = "1.0.1"
description = "Bootstrap and Grow your SaaS with Django"
readme = "README.md"
authors = [
    { name = "Dimitrios Mistriotis", email = "dimitrios@mistriotis.com" },
]
requires-python = ">=3.13"
dependencies = [
    #
    # Django framework - core dependency
    #
    "django>=5.0.13",
    #
    # Package that allows you to use Twelve-factor methodology to configure your Django
    # application with environment variables.
    # https://django-environ.readthedocs.io/en/latest/
    # MIT / X11 License
    #
    "django-environ>=0.11.2",
    #
    # The most popular PostgreSQL adapter for the Python programming language.
    # https://www.psycopg.org/
    # LGPL-3.0 license
    #
    "psycopg[binary]>=3.1.17",
    #
    # Integrated set of Django applications addressing authentication, registration,
    # account management as well as 3rd party (social) account authentication.
    # https://allauth.org/
    # https://docs.allauth.org/en/latest/installation/quickstart.html
    # https://github.com/pennersr/django-allauth
    # MIT license
    #
    "django-allauth>=0.60.1",
    #
    # Celery is a simple, flexible, and reliable distributed system to process
    # vast amounts of messages, while providing operations with the tools required
    # to maintain such a system.
    # Installed as "celery[redis]" to include the Redis broker.
    # https://github.com/celery/celery
    # https://docs.celeryq.dev/en/stable/index.html
    # BSD-3-Clause license plus other copyrights
    #
    "celery[redis]>=5.3.6",
    #
    # Celery Result Backends using the Django ORM/Cache framework.
    # BSD-3-Clause license plus other copyrights
    #
    "django-celery-results>=2.5.1",
    #
    # A collection of custom extensions for the Django Framework
    # Using many of them in different parts of the application
    # https://django-extensions.readthedocs.io/en/latest/
    # MIT license
    #
    "django-extensions>=3.2.3",
    #
    # Python WSGI HTTP Server for UNIX
    # https://gunicorn.org/
    # https://github.com/benoitc/gunicorn?tab=License-1-ov-file
    #
    "gunicorn>=22.0.0",
    #
    # Uvicorn is an ASGI web server implementation for Python.
    # https://www.uvicorn.org/
    # BSD-3-Clause license
    #
    "uvicorn>=0.27.1",
    #
    # Radically simplified static file serving for Python web apps
    # https://whitenoise.readthedocs.io/en/latest/index.html
    # MIT license
    #
    "whitenoise[brotli]>=6.6.0",
    #
    # Rich is a Python library for rich text and beautiful formatting in the terminal.
    # https://github.com/Textualize/rich
    # https://rich.readthedocs.io/en/latest/
    # MIT license
    #
    "rich>=13.7.1",
    #
    # Resend Python SDK
    # https://resend.com/
    # https://github.com/resend/resend-python
    # MIT license
    #
    "resend>=1.0.2",
    #
    # Bringing component-based design to django templates
    # https://django-cotton.com/
    # https://github.com/wrabit/django-cotton
    # MIT license
    #
    "django-cotton>=2.1.2",
    # End of DJForge dependencies, add yours below
]

[dependency-groups]
dev = [
    #
    # An extremely fast Python linter and code formatter, written in Rust.
    # https://github.com/astral-sh/ruff
    # MIT license
    #
    "ruff>=0.1.11",
    #
    # The pytest framework makes it easy to write small tests,
    # yet scales to support complex functional testing for applications and libraries.
    # https://github.com/pytest-dev/pytest
    # MIT license
    #
    "pytest>=7.4.4",
    #
    # A plugin for pytest that provides a set of useful tools
    # for testing Django applications and projects.
    # https://pytest-django.readthedocs.io/en/latest/
    # BSD (3-clause) license
    #
    "pytest-django>=4.7.0",
    #
    # Commitizen is release management tool designed for teams.
    # https://commitizen-tools.github.io/commitizen/
    # MIT license
    #
    "commitizen>=3.13.0",
    #
    # This django app adds a management command that starts a livereload server watching
    # all your static files and templates as well as a custom runserver command that issues
    # livereload requests when the development server is ready after a restart.
    # https://github.com/tjwalch/django-livereload-server
    # BSD-3-Clause license
    #
    "django-livereload-server>=0.5.1",
    #
    # A framework for managing and maintaining multi-language pre-commit hooks.
    # https://pre-commit.com/
    # MIT license
    #
    "pre-commit>=3.6.0",
    #
    # A pytest plugin that adds emojis to your test result report.
    # Used from Github Action for testing
    # https://pypi.org/project/pytest-emoji/
    # MIT license
    #
    "pytest-emoji>=0.2.0",
    #
    # Plugin for generating Markdown reports for pytest results
    # Used from Github Action for testing
    # https://github.com/hackebrot/pytest-md
    # MIT license
    #
    "pytest-md>=0.2.0",
    #
    # Command-line HTTP client and debugger
    #
    "httpie>=3.2.2",
    #
    # Runs pytest, and re-runs it when a file in your project changes.
    # https://github.com/joeyespo/pytest-watch
    # MIT license
    #
    "pytest-watch>=4.2.0",
    #
    # Runs one ruff check test per file and fail if code is not ok for ruff.
    # https://github.com/businho/pytest-ruff
    # MIT license
    #
    "pytest-ruff>=0.3.2",
    #
    # isort your imports, so you don't have to.
    # https://pycqa.github.io/isort/
    # https://github.com/PyCQA/isort
    # MIT license
    #
    "isort>=5.13.2",
    # py.test plugin to check import ordering using isort
    # https://pypi.org/project/pytest-isort/
    # MIT license
    "pytest-isort>=4.0.0",

    # End of DJForge development dependencies, add yours below
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
known_django = "django"
sections = "FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER"
force_single_line = true

[tool.lint.extend-per-file-ignores]
"**/migrations/*.py" = ["D100", "D101", "D104"]

# https://docs.astral.sh/ruff/tutorial/#rule-selection
[tool.lint]
extend-select = [
    "UP", # pyupgrade: automatically upgrade syntax for newer versions of the language.
    "D",
] # pydocstyle: checking compliance with Python docstring conventions.

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djforge.settings"
addopts = [
    "--capture=no",
    "--reuse-db",
    "--isort",
    "--no-migrations",
    "--fail-on-template-vars",
]
